# extraction-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.hatchet.yml  pyproject.toml  railway.worker.toml
.claude/skills/commit/: SKILL.md
docs/: hatchet-setup.md
infra/hatchet/: .env.example  README.md  docker-compose.prod.yml  gen-token.sh
src/: hatchet_client.py  worker.py
src/api/: main.py  server.py
src/api/routers/: __init__.py  extraction.py  guest_extraction.py  host_extraction.py  keyword_extraction.py  media_keyword_extraction.py  news_claim_extract.py  single_claim_extraction.py  standalone_claim_keywords.py  tasks.py
src/api/schemas/: __init__.py  guest_extraction_schema.py  host_extraction_schema.py  keyword_extraction_schema.py  news_claim_extract_schema.py  (+8 more)
src/config/: settings.py
src/database/: claim_episode_repository.py  claim_repository.py  key_takeaways_episode_repository.py  models.py  tag_map_repository.py  tag_repository.py
src/extraction/: models.py  premium_claim_extractor.py  quote_finder.py
src/infrastructure/: gemini_service.py  rate_limiter.py  spend_guard.py
src/pipeline/: premium_extraction_core.py  premium_extraction_pipeline.py
src/tasks/: __init__.py  base.py  guest_extract.py  host_extract.py  keyword_extract.py  news_extract_claims.py  news_extract_topics_and_claims.py  news_extract_topics_and_entities.py  ping.py  podcast_export.py  podcast_extract_claims.py  registry.py
tests/: conftest.py  test_news_topics_entities.py  test_news_topics_extract.py  test_sprint4.py  test_task_layer.py
(+23 files in other folders)
