[project]
name = "extraction-api"
version = "0.1.0"
description = "Gemini-powered claim, keyword, and topic extraction API for podcast and news content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pgvector>=0.2.4",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "fastapi[standard]>=0.121.2",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.3",
    "google-genai>=0.2.0",
    "anthropic>=0.40.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
